--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 .DS_Store
 node_modules
 /dist
+/examples
+/packages
+/public
 
 # local env files
 .env.local
 .env.*.local
+vue.config.js
+babel.config.js
+*.map
 
 # Log files
 npm-debug.log*
