--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "szyc-vue-components",
+  "name": "lr-vue-components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "description": "lr-vue组件库",
+  "license": "MIT",
+  "main": "lib/lrvuecoms.umd.min.js",
+  "keyword": "lr 神州友创",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "lib": "vue-cli-service build --target lib --name lrvuecoms --dest lib packages/index.js",
     "build": "vue-cli-service build",
+    "build:style": "gulp build --gulpfile packages/theme-chalk/gulpfile.js && cp-cli packages/theme-chalk/lib lib/theme-chalk",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "D": "^1.0.0",
     "core-js": "^2.6.5",
+    "uppercamelcase": "^3.0.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -21,12 +30,39 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
+    "cp-cli": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fs-extra": "^9.0.0",
+    "highlight.js": "^9.18.1",
+    "lint-staged": "^10.1.3",
+    "markdown-it-anchor": "^5.2.7",
+    "markdown-it-chain": "^1.3.0",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-decorate": "^1.2.2",
+    "markdown-it-task-checkbox": "^1.0.6",
     "node-sass": "^4.12.0",
+    "precss": "^4.0.0",
     "prettier": "^1.18.2",
+    "saladcss-bem": "0.0.2",
     "sass-loader": "^8.0.0",
+    "transliteration": "^2.1.8",
+    "vue-markdown-loader": "^2.4.1",
+    "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.10"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js,!build/*": [
+      "vue-cli-service lint",
+      "git add"
+    ],
+    "*.vue": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
