--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -66,7 +66,7 @@
           "path": "/table"
         },
         {
-          "desc": "EllipsisFont 布局",
+          "desc": "EllipsisFont 缩略行",
           "name": "ellipsisFont",
           "path": "/ellipsisFont"
         }
