数字滚动效果

--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -91,6 +91,16 @@
           "path": "/select"
         }
       ]
+    },
+    {
+      "desc": "业务组件",
+      "items": [
+        {
+          "desc": "CountUp 数字滚动",
+          "name": "countUp",
+          "path": "/countUp"
+        }
+      ]
     }
   ]
 }
